--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <HEAD>
 <TITLE>A simple frameset document</TITLE>
 </HEAD>
-<FRAMESET cols="20%, 80%">
+<FRAMESET cols="200, *">
   <FRAME src="nav.html">
   <FRAME src="pic18x-user-guide.html">
   <NOFRAMES>
