--- a/nav.html
+++ b/nav.html
@@ -1,3 +1,40 @@
+<head>
+  <meta charset='utf-8' />
+  <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+  <meta name="description" content="Concurrent Pascal" />
+  <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+</head>
 <body>
-nav
+   <header class="site-header">
+
+       <div id="header_wrap" class="outer">
+           <header class="inner">
+      <a id="forkme_banner" href="{{site.repository_url}}">View on GitHub</a>
+
+        <h1 id="project_title">{{site.title}}</h1>
+        <h2 id="project_tagline">{{site.sub-title}}</h2>
+
+             <section id="downloads">
+               <a class="zip_download_link" href="#">Download this project as a .zip file</a>
+               <a class="tar_download_link" href="#">Download this project as a tar.gz file</a>
+             </section>
+           </header>
+       </div>
+
+   </header>
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+       nav
+      </section>
+    </div>   
+   <footer class="site-footer">
+
+       <div id="footer_wrap" class="outer">
+         <footer class="inner">
+           <p class="copyright">Slate theme maintained by <a href="https://github.com/jasoncostello">Jason Costello</a></p>
+           <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+         </footer>
+       </div>
+   </footer>
+
 </body>
