--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <HTML>
 <HEAD>
-<TITLE>A simple frameset document</TITLE>
+<TITLE>Concurrent Pascal</TITLE>
 </HEAD>
-<FRAMESET cols="200, *">
+<FRAMESET cols="500, *">
   <FRAME src="nav.html">
-  <FRAME src="pic18x-user-guide.html">
+  <FRAME src="pic18x-user-guide.html" name="content" >
   <NOFRAMES>
-      <P>noframes content</P>
+      <P>You need a frames-enabled brower to view this document</P>
   </NOFRAMES>
 </FRAMESET>
 </HTML>
