--- a/nav.html
+++ b/nav.html
@@ -6,33 +6,40 @@
 </head>
 <body>
    <header class="site-header">
-
        <div id="header_wrap" class="outer">
            <header class="inner">
-      <a id="forkme_banner" href="{{site.repository_url}}">View on GitHub</a>
-
-        <h1 id="project_title">{{site.title}}</h1>
-        <h2 id="project_tagline">{{site.sub-title}}</h2>
-
+      <a id="forkme_banner" href="https://github.com/dhawk/concurrent-pascal-compiler">View on GitHub</a>
+        <h1 id="project_title">Concurrent Pascal for Microcontrollers</h1>
+        <h2 id="project_tagline">{{site.sub-title}}
+              <ul>
+                 <li>Language supported</li>
+                 <li>Interrupt driven</li>
+                 <li>Multi-priority</li>
+                 <li>Monitors for inter-process communication</li>
+             </ul>       
+        </h2>
              <section id="downloads">
                <a class="zip_download_link" href="#">Download this project as a .zip file</a>
                <a class="tar_download_link" href="#">Download this project as a tar.gz file</a>
              </section>
            </header>
        </div>
-
    </header>
-    <div id="main_content_wrap" class="outer">
+
+   <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-       nav
+      <ul>
+       <li><A href="test1.html" target="content">test1</A></li>
+       <li><A href="pic18x-user-guide.html" target="content">PIC18x User Guide</A></li>
+      </ul>
       </section>
     </div>   
-   <footer class="site-footer">
+
+    <footer class="site-footer">
 
        <div id="footer_wrap" class="outer">
          <footer class="inner">
-           <p class="copyright">Slate theme maintained by <a href="https://github.com/jasoncostello">Jason Costello</a></p>
-           <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+           <p class="copyright">Theme derived from Slate theme<br>maintained by <a href="https://github.com/jasoncostello">Jason Costello</a></p>
          </footer>
        </div>
    </footer>
