--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
            <header class="inner">
       <a id="forkme_banner" href="https://github.com/dhawk/concurrent-pascal-compiler">View on GitHub</a>
         <h1 id="project_title">Concurrent Pascal for Microcontrollers</h1>
-        <h2 id="project_tagline">{{site.sub-title}}
+        <h2 id="project_tagline">
               <ul>
                  <li>Language supported</li>
                  <li>Interrupt driven</li>
@@ -25,21 +25,23 @@
            </header>
        </div>
    </header>
+   <hr>
 
-   <div id="main_content_wrap" class="outer">
+   <div id="nav_content_wrap" class="outer">
       <section id="main_content" class="inner">
       <ul>
        <li><A href="test1.html" target="content">test1</A></li>
        <li><A href="pic18x-user-guide.html" target="content">PIC18x User Guide</A></li>
       </ul>
       </section>
-    </div>   
-
+    </div>
+    
+    <hr>
     <footer class="site-footer">
 
        <div id="footer_wrap" class="outer">
          <footer class="inner">
-           <p class="copyright">Theme derived from Slate theme<br>maintained by <a href="https://github.com/jasoncostello">Jason Costello</a></p>
+           <p class="copyright">Theme derived from Slate maintained by <a href="https://github.com/jasoncostello">Jason Costello</a></p>
          </footer>
        </div>
    </footer>
