--- a/nav.html
+++ b/nav.html
@@ -23,27 +23,16 @@
                <a class="tar_download_link" href="#">Download this project as a tar.gz file</a>
              </section>
            </header>
-       </div>
-   </header>
-   <hr>
+    <hr>
 
-   <div id="nav_content_wrap" class="outer">
-      <section id="main_content" class="inner">
       <ul>
        <li><A href="test1.html" target="content">test1</A></li>
        <li><A href="pic18x-user-guide.html" target="content">PIC18x User Guide</A></li>
       </ul>
-      </section>
-    </div>
     
-    <hr>
-    <footer class="site-footer">
-
-       <div id="footer_wrap" class="outer">
-         <footer class="inner">
-           <p class="copyright">Theme derived from Slate maintained by <a href="https://github.com/jasoncostello">Jason Costello</a></p>
-         </footer>
-       </div>
-   </footer>
+       <hr>
+           <p class="copyright">Theme derived from Slate (<a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
+      </div>
+   </header>
 
 </body>
