--- a/nav.html
+++ b/nav.html
@@ -8,9 +8,9 @@
     <title>Concurrent Pascal Compiler</title>
   </head>
   <body>
-    <div class="site-header">
+    <header class="site-header">
       <div id="header_wrap" class="outer">
-        <div class="inner">
+        <header class="inner">
           <a id="forkme_banner" href="https://github.com/dhawk/concurrent-pascal-compiler">View on GitHub</a>
           <h1 id="project_title">Concurrent Pascal for Microcontrollers</h1>
           <h2 id="project_tagline"></h2>
@@ -24,7 +24,7 @@
             <a class="zip_download_link" href="href='javascript:alert("not implemented");'">Download this project as a .zip file</a> 
             <a class="tar_download_link" href="href='javascript:alert("not implemented");'">Download this project as a tar.gz file</a>
           </section>
-        </div>
+        </header>
         <hr />
         <ul>
           <li>
@@ -37,7 +37,7 @@
         <hr />
         <p>Contact us: <a href="mailto:cpc@davidhawk.us">Email</a></p>
         <p style="font-size:70%">Theme derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
-      </div>
+      </header>
     </div>
   </body>
 </html>
