--- a/nav.html
+++ b/nav.html
@@ -6,6 +6,15 @@
     <meta name="description" content="Concurrent Pascal" />
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css" />
     <title>Concurrent Pascal Compiler</title>
+    <style>
+      #nav_body {
+        color: #fff;
+        font-size: 24px;
+        font-weight: 300;
+        background: none;
+        text-shadow: #111 0px 0px 10px;
+      }
+     </style>
   </head>
   <body>
     <header class="site-header">
@@ -13,30 +22,33 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/dhawk/concurrent-pascal-compiler">View on GitHub</a>
           <h1 id="project_title">Concurrent Pascal for Microcontrollers</h1>
-          <h2 id="project_tagline"></h2>
-          <ul>
-            <li>Language supported</li>
-            <li>Interrupt driven</li>
-            <li>Multi-priority</li>
-            <li>Monitors for inter-process communication</li>
-          </ul>
+          <h2 id="project_tagline">
+            <ul>
+              <li>Language supported</li>
+              <li>Interrupt driven</li>
+              <li>Multi-priority</li>
+              <li>Monitors for inter-process communication</li>
+            </ul>
+          </h2>
           <section id="downloads">
-            <a class="zip_download_link" href="href='javascript:alert("not implemented");'">Download this project as a .zip file</a> 
-            <a class="tar_download_link" href="href='javascript:alert("not implemented");'">Download this project as a tar.gz file</a>
+            <a class="zip_download_link" href="href=javascript:alert('not implemented');">Download this project as a .zip file</a> 
+            <a class="tar_download_link" href="href=javascript:alert('not implemented');">Download this project as a tar.gz file</a>
           </section>
         </header>
         <hr />
-        <ul>
-          <li>
-            <a href="test1.html" target="content">test1</a>
-          </li>
-          <li>
-            <a href="pic18x-user-guide.html" target="content">PIC18x User Guide</a>
-          </li>
-        </ul>
-        <hr />
-        <p>Contact us: <a href="mailto:cpc@davidhawk.us">Email</a></p>
-        <p style="font-size:70%">Theme derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
+        <div id="nav_body">
+          <ul>
+            <li>
+              <a href="test1.html" target="content">test1</a>
+            </li>
+            <li>
+              <a href="pic18x-user-guide.html" target="content">PIC18x User Guide</a>
+            </li>
+          </ul>
+          <hr />
+          <p>Contact us: <a href="mailto:cpc@davidhawk.us">Email cpc@davidhawk.us</a></p>
+          <p style="font-size:70%">Theme derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
+        </div>
       </header>
     </div>
   </body>
