--- a/nav.html
+++ b/nav.html
@@ -31,12 +31,13 @@
             </ul>
           </h2>
           <section id="downloads">
-            <a class="zip_download_link" href="href=javascript:alert('not implemented');">Download this project as a .zip file</a> 
-            <a class="tar_download_link" href="href=javascript:alert('not implemented');">Download this project as a tar.gz file</a>
+            <a class="zip_download_link" href="javascript:alert('not implemented');">Download this project as a .zip file</a> 
+            <a class="tar_download_link" href="javascript:alert('not implemented');">Download this project as a tar.gz file</a>
           </section>
         </header>
         <hr />
         <div id="nav_body">
+          <h2>Articles:</h2>
           <ul>
             <li>
               <a href="test1.html" target="content">test1</a>
@@ -46,7 +47,7 @@
             </li>
           </ul>
           <hr />
-          <p>Contact us: <a href="mailto:cpc@davidhawk.us">Email cpc@davidhawk.us</a></p>
+          <p>Email:&nbsp;<a href="mailto:cpc@davidhawk.us">cpc@davidhawk.us</a></p>
           <p style="font-size:70%">Theme derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
         </div>
       </header>
