--- a/nav.html
+++ b/nav.html
@@ -37,7 +37,7 @@
         </header>
         <hr />
         <div id="nav_body">
-          <h2>Articles:</h2>
+          <h2 id="project_tagline">Articles:</h2>
           <ul>
             <li>
               <a href="test1.html" target="content">test1</a>
