--- a/nav.html
+++ b/nav.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css" />
     <title>Concurrent Pascal Compiler</title>
     <style>
+      #nav_article_links {
+        color: #fff;
+        font-size: 24px;
+        font-weight: 300;
+        background: none;
+        text-shadow: #111 0px 0px 10px;
+      }
       #nav_body {
         color: #fff;
         font-size: 24px;
@@ -36,21 +43,18 @@
           </section>
         </header>
         <hr />
+        <h1 id="project_tagline">Articles:</h1>
+        <ul id="nav_article_links">
+          <li><a href="test1.html" target="content">test1</a></li>
+          <li><a href="pic18x-user-guide.html" target="content">PIC18x User Guide</a></li>
+        </ul>
         <div id="nav_body">
-          <h2 id="project_tagline">Articles:</h2>
-          <ul>
-            <li>
-              <a href="test1.html" target="content">test1</a>
-            </li>
-            <li>
-              <a href="pic18x-user-guide.html" target="content">PIC18x User Guide</a>
-            </li>
-          </ul>
+          <p>Some stuff here</p>
           <hr />
-          <p>Email:&nbsp;<a href="mailto:cpc@davidhawk.us">cpc@davidhawk.us</a></p>
-          <p style="font-size:70%">Theme derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
+          <p>Email:&nbsp;&nbsp;&nbsp;<a href="mailto:cpc@davidhawk.us">cpc@davidhawk.us</a></p>
+          <p style="font-size:55%">Theme derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
         </div>
-      </header>
+     </header>
     </div>
   </body>
 </html>
