more pic18x user guide

--- a/nav.html
+++ b/nav.html
@@ -6,13 +6,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css" />
     <title>Concurrent Pascal Compiler</title>
     <style>
-      #nav_article_links {
-        color: #fff;
-        font-size: 24px;
-        font-weight: 300;
-        background: none;
-        text-shadow: #111 0px 0px 10px;
-      }
       #nav_body {
         color: #fff;
         font-size: 24px;
@@ -20,13 +13,12 @@
         background: none;
         text-shadow: #111 0px 0px 10px;
       }
-      #nav_article_links a {
-        color: #F2F2F2;
-        text-decoration: underline;
-      }
-      #nav_body_links a {
+      #nav_body a {
         color: #0090FF;
         text-decoration: underline;
+      }
+      #nav_article_links {
+        font-size: 20px;
       }
      </style>
   </head>
@@ -38,29 +30,33 @@
           <h1 id="project_title">Concurrent Pascal for Microcontrollers</h1>
           <h2 id="project_tagline">
             <ul>
+              <li>Cooperating sequential processes</li>
               <li>Language supported</li>
-              <li>Interrupt driven</li>
-              <li>Multi-priority</li>
+              <li>Interrupt driven processes</li>
+              <li>Multi-priority processes</li>
               <li>Monitors for inter-process communication</li>
             </ul>
           </h2>
           <section id="downloads">
-            <a class="zip_download_link" href="javascript:alert('not implemented');">Download this project as a .zip file</a> 
+            <a class="zip_download_link" href="javascript:alert('not implemented');">Download this project as a .zip file</a>
             <a class="tar_download_link" href="javascript:alert('not implemented');">Download this project as a tar.gz file</a>
           </section>
         </header>
-        <hr />
-        <h1 id="project_tagline">Articles:</h1>
-        <ul id="nav_article_links">
-          <li><a href="test1.html" target="content">test1</a></li>
-          <li><a href="pic18x-user-guide.html" target="content">PIC18x User Guide</a></li>
-        </ul>
-        <div id="nav_body">
-          <p>Some stuff here</p>
+        <header class="inner">
           <hr />
-          <p>Email:&nbsp;&nbsp;&nbsp;<a href="mailto:cpc@davidhawk.us">cpc@davidhawk.us</a></p>
-          <p style="font-size:55%">Theme derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
-        </div>
+          <div id="nav_body">
+            <p>intro...</p>
+            <h1 id="project_tagline">Articles:</h1>
+            <ul id="nav_article_links">
+              <li><a href="test1.html" target="content">test1</a></li>
+              <li><a href="pic18x-user-guide.html" target="content">PIC18x User Guide</a></li>
+            </ul>
+            <p>conclusion...</p>
+            <hr />
+            <p>Email:&nbsp;&nbsp;&nbsp;<a href="mailto:cpc@davidhawk.us">cpc@davidhawk.us</a></p>
+            <p style="font-size:55%">Theme credit: derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
+          </div>
+        </header>
      </header>
     </div>
   </body>
