more pic81x user guide

--- a/nav.html
+++ b/nav.html
@@ -37,10 +37,12 @@
               <li>Monitors for inter-process communication</li>
             </ul>
           </h2>
+<!--
           <section id="downloads">
             <a class="zip_download_link" href="javascript:alert('not implemented');">Download this project as a .zip file</a>
             <a class="tar_download_link" href="javascript:alert('not implemented');">Download this project as a tar.gz file</a>
           </section>
+-->
         </header>
         <header class="inner">
           <hr />
@@ -53,7 +55,7 @@
             </ul>
             <p>conclusion...</p>
             <hr />
-            <p>Email:&nbsp;&nbsp;&nbsp;<a href="mailto:cpc@davidhawk.us">cpc@davidhawk.us</a></p>
+            <p>Email:&nbsp;&nbsp;&nbsp;<a href="mailto:cpc@davidhawk.us">cp@davidhawk.us</a></p>
             <p style="font-size:55%">Theme credit: derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
           </div>
         </header>
