--- a/nav.html
+++ b/nav.html
@@ -53,7 +53,7 @@
               <li><a href="test1.html" target="content">test1</a></li>
               <li><a href="pic18x-user-guide.html" target="content">PIC18x User Guide</a></li>
             </ul>
-            <p>conclusion...</p>
+            <p>conclusiion...</p>
             <hr />
             <p>Email:&nbsp;&nbsp;&nbsp;<a href="mailto:cpc@davidhawk.us">cp@davidhawk.us</a></p>
             <p style="font-size:55%">Theme credit: derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
