added download of .zip file

--- a/nav.html
+++ b/nav.html
@@ -37,12 +37,13 @@
               <li>Monitors for inter-process communication</li>
             </ul>
           </h2>
-<!--
+
           <section id="downloads">
-            <a class="zip_download_link" href="javascript:alert('not implemented');">Download this project as a .zip file</a>
+            <a class="zip_download_link" href="cpc_pic18x.zip">Download this project as a .zip file</a>
+<!--            
             <a class="tar_download_link" href="javascript:alert('not implemented');">Download this project as a tar.gz file</a>
-          </section>
 -->
+          </section>
         </header>
         <header class="inner">
           <hr />
