--- a/nav.html
+++ b/nav.html
@@ -37,22 +37,28 @@
               <li>Monitors for inter-process communication</li>
             </ul>
           </h2>
-
+<!--
           <section id="downloads">
-            <a class="zip_download_link" href="cpc_pic18x.zip">Download this project as a .zip file</a>
-<!--            
+            <a class="zip_download_link" href="javascript:alert('not implemented');">Download this project as a .zip file</a>
             <a class="tar_download_link" href="javascript:alert('not implemented');">Download this project as a tar.gz file</a>
--->
           </section>
+-->
         </header>
         <header class="inner">
           <hr />
           <div id="nav_body">
             <p>intro...</p>
-            <h1 id="project_tagline">Articles:</h1>
+            <h1 id="project_tagline">Downloads:</h1>
             <ul id="nav_article_links">
-              <li><a href="test1.html" target="content">test1</a></li>
+              <li><a href="downloads.html" target="content">Downloads</a></li>
+            </ul>
+            <h1 id="project_tagline">User Articles:</h1>
+            <ul id="nav_article_links">
               <li><a href="pic18x-user-guide.html" target="content">PIC18x User Guide</a></li>
+            </ul>
+            <h1 id="project_tagline">Implementation Notes:</h1>
+            <ul id="nav_article_links">
+              <li><a href="build_tools.html" target="content">Build Tools</a></li>
             </ul>
             <p>conclusiion...</p>
             <hr />
