edited interrupt problems article

--- a/nav.html
+++ b/nav.html
@@ -62,7 +62,7 @@
               <li><a href="build_tools.html" target="content">Build Tools</a></li>
             </ul>
             
-            <p>conclusiion...</p>
+            <p>conclusion...</p>
             <hr />
             <p>Email:&nbsp;&nbsp;&nbsp;<a href="mailto:cpc@davidhawk.us">cp@davidhawk.us</a></p>
             <p style="font-size:55%">Theme credit: derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
