--- a/nav.html
+++ b/nav.html
@@ -40,7 +40,7 @@
         <header class="inner">
           <hr />
           <div id="nav_body">
-            <p>intro...</p>
+            <p><i>this site is under construction...</i></p>
             
             <h1 id="project_tagline">Downloads:</h1>
             <ul id="nav_article_links">
@@ -62,7 +62,6 @@
               <li><a href="build_tools.html" target="content">Build Tools</a></li>
             </ul>
             
-            <p>conclusion...</p>
             <hr />
             <p>Email:&nbsp;&nbsp;&nbsp;<a href="mailto:cpc@davidhawk.us">cp@davidhawk.us</a></p>
             <p style="font-size:55%">Theme credit: derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
