--- a/nav.html
+++ b/nav.html
@@ -40,7 +40,7 @@
         <header class="inner">
           <hr />
           <div id="nav_body">
-            <p><i>this site is under construction...</i></p>
+            <p><i>This site is under construction.  Articles here may be incomplete and additional articles are planned.  Stay tuned...</i></p>
             
             <h1 id="project_tagline">Downloads:</h1>
             <ul id="nav_article_links">
@@ -64,7 +64,7 @@
             
             <hr />
             <p>Email:&nbsp;&nbsp;&nbsp;<a href="mailto:cpc@davidhawk.us">cp@davidhawk.us</a></p>
-            <p style="font-size:55%">Theme credit: derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
+            <p style="font-size:45%">Theme credit: derived from Slate (maintained by <a href="https://github.com/jasoncostello">Jason Costello</a>)</p>
           </div>
         </header>
      </header>
