added partial language reference

--- a/nav.html
+++ b/nav.html
@@ -54,6 +54,7 @@
             
             <h1 id="project_tagline">User Guides:</h1>
             <ul id="nav_article_links">
+              <li><a href="concurrent-pascal-language_reference.html" target="content">Concurrent Pascal Language Reference</a></li>
               <li><a href="pic18x-user-guide.html" target="content">PIC18x User Guide</a></li>
             </ul>
              
